@@ -1,11 +1,11 @@
 README:  Tcl
-    This is the Tcl 8.5.1 source distribution.
+    This is the Tcl 8.5.2 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
     link at the above URL.
 
-RCS: @(#) $Id: README,v 1.50.2.14 2008/01/02 19:12:02 dgp Exp $
+RCS: @(#) $Id: README,v 1.50.2.15 2008/02/16 22:17:25 dgp Exp $
 
 Contents
 --------
