@@ -1,11 +1,11 @@
-# $Id: tcl.spec,v 1.17.2.15 2008/02/12 04:34:09 dgp Exp $
+# $Id: tcl.spec,v 1.17.2.16 2008/02/16 22:17:30 dgp Exp $
 # This file is the basis for a binary Tcl RPM for Linux.
 
 %{!?directory:%define directory /usr/local}
 
 Name:          tcl
 Summary:       Tcl scripting language development environment
-Version:       8.5.1
+Version:       8.5.2b1
 Release:       2
 License:       BSD
 Group:         Development/Languages
